# tally

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  commitlint.config.js  commitlint.config.mjs
.github/: PULL_REQUEST_TEMPLATE.md  RELEASE_NOTES.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
include/: tally.h
src/: main.c  tally.c
tests/: run_tests.sh
